polling per 1 sec.

--- a/views/d.html
+++ b/views/d.html
@@ -18,7 +18,7 @@
 
                 <div class="tempStatBox span2" ontablet="span4" ondesktop="span2">
                     <div class="tempStat" style="border-color: rgb(103, 194, 239);">
-                        {{CarData['Properties'][7].Snapshot.Value}}
+                        {{roundNumber(CarData['Properties'][7].Snapshot.Value)}}
                     </div>
                     <span>Engine Speed</span>
                 </div>
