--- a/views/r.html
+++ b/views/r.html
@@ -10,4 +10,13 @@
         </div>
     
 
+            <div class="row-fluid">
+        <div class="span12">
+            <h2>Fuel Consumption</h2>
+                <div class="demo-container">
+            <div id="fuelConsumptionChartContainer" class="demo-placeholder"></div>
+        </div>
+        </div>
+        </div>
+
 </div><!--/fluid-row-->
